Remove references to gruppo and substitute them with chat

--- a/report/main.tex
+++ b/report/main.tex
@@ -445,7 +445,7 @@ CHAT           & E         & 1       & R    \\ \hline
 TOTALE         &           & 11      &      \\ \hline
 \end{tabular}
 \end{table}
-\subsection{Dare diritti amministratore ad un utente in un gruppo}
+\subsection{Dare diritti amministratore ad un utente in una chat}
 \paragraph{Descrizione} L'operazione viene svolta come una uscita volontaria da parte del membro candidato a diventare amministratore e il suo reinserimento come membro amministratore.
 \paragraph{Frequenza} 1 / 4 g
 \begin{table}[H]
@@ -465,7 +465,7 @@ APPARTENENZA                      & A         & 1          & W    \\ \hline
 TOTALE                            &           & 15         &      \\ \hline
 \end{tabular}
 \end{table}
-\subsection{Cacciare un utente da un gruppo}
+\subsection{Cacciare un utente da una chat}
 \paragraph{Descrizione} Similmente a come avviene l'uscita volontaria, l'istanza del membro cacciato referenzierà una istanza della tabella USCITA del tipo ESILIO.
 \paragraph{Frequenza} 1 / 10 g
 \begin{table}[H]
