--- a/report/main.tex
+++ b/report/main.tex
@@ -2,6 +2,7 @@
 
 \usepackage{float}
 \usepackage{hyperref}
+\usepackage{amsmath}
 
 \begin{document}
 \tableofcontents
@@ -174,7 +175,7 @@ Per modellizzare la possibilità da parte degli utenti di mettere like e dislike
  
 \section{Schemi di navigazione e tabelle degli accessi}
 
-\subsection{Creare un nuovo utente}
+\subsection{Creare un nuovo utente} \label{nuovo_utente}
 \paragraph{Descrizione} Aggiungere alla tabella degli utenti una nuova riga e assegnargli una password 
 \paragraph{Frequenza} 10 / g 
 \begin{table}[H]
@@ -188,7 +189,7 @@ STORICO\_PASSWORD & E         & 1       & W    \\ \hline
 \textit{TOTALE}   &           & 6       &      \\ \hline
 \end{tabular}
 \end{table}
-\subsection{Cambiare password}
+\subsection{Cambiare password} \label{cambio_password}
 \paragraph{Descrizione} Aggiungere alla tabella dello storico password una nuova riga. 
 \paragraph{Frequenza} 1 / 60 g 
 \begin{table}[H]
@@ -202,7 +203,7 @@ STORICO\_PASSWORD & E         & 1       & W    \\ \hline
 \textit{TOTALE}   &           & 5       &      \\ \hline
 \end{tabular}
 \end{table}
-\subsection{Autenticazione dell'utente all'interno del social network tramite username e password}
+\subsection{Autenticazione dell'utente all'interno del social network tramite username e password} \label{autenticazione}
 \paragraph{Descrizione} Si controlla se esiste istanza di STORICO\_PASSWORD contentente l'username e la password inserite
 \paragraph{Frequenza} 10 / g
 \begin{table}[H]
@@ -218,7 +219,7 @@ STORICO\_ACCESSO  & E         & 1       & W    \\ \hline
 TOTALE            &           & 11      &      \\ \hline
 \end{tabular}
 \end{table}
-\subsection{Seguire un utente} 
+\subsection{Seguire un utente} \label{follow}
 \paragraph{Descrizione} Si aggiunge una istanza alla tabella SEGUIRE avente come chiave la tupla (utente seguace, utente seguito)
 \paragraph{Frequenza} 2 / g
 \begin{table}[H]
@@ -233,7 +234,7 @@ UTENTE   & E         & 1       & R    \\ \hline
 TOTALE   &           & 6       &      \\ \hline
 \end{tabular}
 \end{table}
-\subsection{Smettere di seguire un utente}
+\subsection{Smettere di seguire un utente} \label{unfollow}
 \paragraph{Descrizione} Si accede all'istanza di SEGUIRE identificata dalla tupla (utente seguace, utente seguito) e si aggiunge assegna al campo DataFine la data attuale.
 \paragraph{Frequenza} 1 / 10 g
 \begin{table}[H]
@@ -248,7 +249,7 @@ UTENTE   & E         & 1       & R    \\ \hline
 TOTALE   &           & 5       &      \\ \hline
 \end{tabular}
 \end{table}
-\subsection{Creare una nuova chat}
+\subsection{Creare una nuova chat} \label{nuova_chat}
 \paragraph{Descrizione} Viene creato una nuova istanza di CHAT e un primo membro amminstratore della chat.
 \paragraph{Frequenza} 1 / 20 g
 \begin{table}[H]
@@ -264,7 +265,7 @@ CHAT           & E         & 1       & W    \\ \hline
 TOTALE         &           & 9       &      \\ \hline
 \end{tabular}
 \end{table}
-\subsection{Postare e commentare}
+\subsection{Postare e commentare} \label{postare}
 \paragraph{Descrizione}
 \paragraph{Frequenza} 10 / g
 \begin{table}[t]
@@ -282,7 +283,7 @@ CONTENUTO            & E         & 1       & R    \\ \hline
 TOTALE               &           & 11      &      \\ \hline
 \end{tabular}
 \end{table}
-\subsection{Reagire con like/dislike a post e commenti}
+\subsection{Reagire con like/dislike a post e commenti} \label{like}
 \paragraph{Descrizione} Si aggiunge una istanza alla tabella reazione con identificatore la tupla (utente, contenuto) e nel campo LikeDislike +1 se è un like, -1 se è un dislike.
 \paragraph{Frequenza} 80 / g
 \begin{table}[h]
@@ -296,7 +297,7 @@ CONTENUTO       & E         & 1       & R    \\ \hline
 \textit{TOTALE} &           & 4       &      \\ \hline
 \end{tabular}
 \end{table}
-\subsection{Leggere un post}
+\subsection{Leggere un post} \label{leggere_post}
 \paragraph{Descrizione} Si mostrano il contentuto, l'ora di pubblicazione, l'autore, i commenti, il numero di like netto (cioè la somma algebrica dei like e dislike), se presente il luogo di pubblicazione.
 \paragraph{Frequenza} 100 / g
 \begin{table}[H]
@@ -313,28 +314,30 @@ REGIONE              & E         & 7       & R    \\ \hline
 PARTE\_DI            & E         & 7       & R    \\ \hline
 RISPOSTA             & A         & 10      & R    \\ \hline
 COMMENTO             & E         & 10      & R    \\ \hline
-TOTALE               &           & 238     &      \\ \hline
+REAZIONE             & A         & 2000    & R    \\ \hline
+TOTALE               &           & 2238    &      \\ \hline
 \end{tabular}
 \end{table}
-\subsection{Scorrere il post pubblicati dagli utenti seguiti (feed)}
+\subsection{Scorrere il post pubblicati dagli utenti seguiti (feed)} \label{feed}
 \paragraph{Descrizione} Questa operazione mostra in ordine cronologico i titoli, il numero di like netto e l'autore dei post pubblicati dagli utenti seguiti.
 \paragraph{Frequenza} 40 / g
 \begin{table}[H]
 \paragraph{Tavola degli accessi\newline}
 \begin{tabular}{|c|c|c|c|}
 \hline
-Concetto         & Costrutto & Accessi & Tipo \\ \hline
-UTENTE           & E         & 1       & R    \\ \hline
-SEGUE            & A         & 100     & R    \\ \hline
-SEGUIRE          & E         & 100     & R    \\ \hline
-\textit{SEGUITO} & A         & 100     & R    \\ \hline
-UTENTE           & E         & 100     & R    \\ \hline
-PUBBLICAZIONE    & A         & 2000    & R    \\ \hline
-CONTENUTO        & E         & 2000    & R    \\ \hline
-TOTALE           &           & 4401    &      \\ \hline
+Concetto      & Costrutto & Accessi & Tipo \\ \hline
+UTENTE        & E         & 1       & R    \\ \hline
+SEGUE         & A         & 100     & R    \\ \hline
+SEGUIRE       & E         & 100     & R    \\ \hline
+SEGUITO       & A         & 100     & R    \\ \hline
+UTENTE        & E         & 100     & R    \\ \hline
+PUBBLICAZIONE & A         & 2000    & R    \\ \hline
+CONTENUTO     & E         & 2000    & R    \\ \hline
+REAZIONE      & A         & 400000  & R    \\ \hline
+TOTALE        &           & 404401  &      \\ \hline
 \end{tabular}
 \end{table}
-\subsection{Vedere il profilo di un utente}
+\subsection{Vedere il profilo di un utente} \label{vedere_profilo}
 \paragraph{Descrizione} Si mostrano nome, cognome, data di nascita, location e la sua reputazione.
 \paragraph{Frequenza} 5 / g
 \begin{table}[H]
@@ -347,7 +350,7 @@ REAZIONE & A         & 100     & R    \\ \hline
 TOTALE   &           & 101     &      \\ \hline
 \end{tabular}
 \end{table}
-\subsection{Vedere i contenuti pubblicati da un utente}
+\subsection{Vedere i contenuti pubblicati da un utente} \label{vedere_post_utente}
 \paragraph{Descrizione} Si mostrano tutti i contenuti che hanno come autore l'utente considerato
 \paragraph{Frequanza} 1 / g
 \begin{table}[H]
@@ -361,7 +364,7 @@ CONTENUTO     & E         & 20      & R    \\ \hline
 TOTALE        &           & 41      &      \\ \hline
 \end{tabular}
 \end{table}
-\subsection{Scrivere un messaggio nella chat}
+\subsection{Scrivere un messaggio nella chat} \label{scrivere_messaggio}
 \paragraph{Descrizione} Si aggiunge una istanza nella tabella MESSAGGIO con una referenza esterna al membro autore.
 \paragraph{Frequenza} 50 / g 
 \begin{table}[H]
@@ -379,7 +382,7 @@ CONTENUTO   & E         & 1       & R    \\ \hline
 TOTALE      &           & 11      &      \\ \hline
 \end{tabular}
 \end{table}
-\subsection{Uscire volontariamente dalla chat}
+\subsection{Uscire volontariamente dalla chat} \label{uscire_volontariamente}
 \paragraph{Descrizione} Nell'istanza del membro che sta uscendo si aggiunge una referenza ad una nuova istanza USCITA di tipo VOLONTARIA.
 \paragraph{Frequenza} 1 / 100 g 
 \begin{table}[H]
@@ -393,7 +396,7 @@ VOLONTARIA & E         & 1       & W    \\ \hline
 TOTALE     &           & 6       &      \\ \hline
 \end{tabular}
 \end{table}
-\subsection{Elencare i membri attuali della chat}
+\subsection{Elencare i membri attuali della chat} \label{membri_chat}
 \paragraph{Descrizione} Vengono elencati gli username, ruolo e data di entrata degli utenti membri della chat.
 \paragraph{Frequenza} 1 / g
 \begin{table}[H]
@@ -407,7 +410,7 @@ MEMBRO       & E         & 20      & R    \\ \hline
 TOTALE       &           & 41      &      \\ \hline
 \end{tabular}
 \end{table}
-\subsection{Leggere i messaggi della chat}
+\subsection{Leggere i messaggi della chat} \label{leggere_messaggi}
 \paragraph{Descrizione} Ordinati dal più recente al più vecchio vengono mostrati il contenuto dei messaggi, il mittente, un eventuale messaggio citato e un eventuale contenuto in riferimento. Verranno ignorati i messaggi eliminati.
 \paragraph{Frequenza} 90 / g
 \begin{table}[H]
@@ -427,7 +430,7 @@ CONTENUTO    & E         & 300     & R    \\ \hline
 TOTALE       &           & 1841    &      \\ \hline
 \end{tabular}
 \end{table}
-\subsection{Aggiungere nuovi membri alla chat}
+\subsection{Aggiungere nuovi membri alla chat} \label{aggiungere_membri}
 \paragraph{Descrizione} Viene creata una nuova istanza nella tabella MEMBRO che fa riferimento all'utente aggiunto, alla chat in cui è stato inserito, la data di entrata e il membro amministratore che lo ha aggiunto.
 \paragraph{Frequenza} 1 / g
 \begin{table}[H]
@@ -445,7 +448,7 @@ CHAT           & E         & 1       & R    \\ \hline
 TOTALE         &           & 11      &      \\ \hline
 \end{tabular}
 \end{table}
-\subsection{Dare diritti amministratore ad un utente in una chat}
+\subsection{Dare diritti amministratore ad un utente in una chat} \label{fare_amministratore}
 \paragraph{Descrizione} L'operazione viene svolta come una uscita volontaria da parte del membro candidato a diventare amministratore e il suo reinserimento come membro amministratore.
 \paragraph{Frequenza} 1 / 4 g
 \begin{table}[H]
@@ -465,7 +468,7 @@ APPARTENENZA                      & A         & 1          & W    \\ \hline
 TOTALE                            &           & 15         &      \\ \hline
 \end{tabular}
 \end{table}
-\subsection{Cacciare un utente da una chat}
+\subsection{Cacciare un utente da una chat} \label{cacciare}
 \paragraph{Descrizione} Similmente a come avviene l'uscita volontaria, l'istanza del membro cacciato referenzierà una istanza della tabella USCITA del tipo ESILIO.
 \paragraph{Frequenza} 1 / 10 g
 \begin{table}[H]
@@ -481,7 +484,7 @@ AMMINISTRATORE & E         & 1       & R    \\ \hline
 TOTALE         &           & 9       &      \\ \hline
 \end{tabular}
 \end{table}
-\subsection{Eliminare un messaggio dalla chat}
+\subsection{Eliminare un messaggio dalla chat} \label{eliminare_messaggio}
 \paragraph{Descrizione} Verrà creata una istanza della relazione ELIMINAZIONE identificata dalla tupla (messaggio eliminato, amministratore responsabile della eliminazione).
 \paragraph{Frequenza} 5 / g
 \begin{table}[H]
@@ -495,7 +498,7 @@ AMMINISTRATORE & E         & 1       & R    \\ \hline
 TOTALE         &           & 4       &      \\ \hline
 \end{tabular}
 \end{table}
-\subsection{Aggiungere regione a tabella REGIONE}
+\subsection{Aggiungere regione a tabella REGIONE} \label{aggiungere_regione}
 \paragraph{Descrizione} Viene creata una nuova istanza di REGIONE la quale conterrà la denominazione della regione e eventualmente la regione superiore.
 \paragraph{Frequenza} 1 / 100 g
 \begin{table}[H]
@@ -514,6 +517,106 @@ TOTALE             &            & 19         &            \\ \hline
 \end{table}
 \section{Raffinamento dello schema (eliminazione di identificatori esterni, attributi composti e gerarchie, scelta delle chiavi)}
 \section{Analisi delle ridondanze}
+\subsection{Numero di like netto dei contenuti}
+Consideriamo se è il caso di aggiungere un campo ridondante nell'entità CONTENUTO che calcola il numero netto di like riguardanti quel contenuto. Le operazioni interessate da questa ridondanza sono le operazioni \ref{like}, \ref{leggere_post}, \ref{feed}.
+\subsubsection{Caso senza ridondanza}
+\begin{table}[H]
+\paragraph{Operazione \ref{like}\newline}
+\begin{tabular}{|c|c|c|c|}
+\hline
+Concetto        & Costrutto & Accessi & Tipo \\ \hline
+UTENTE          & E         & 1       & R    \\ \hline
+REAZIONE        & A         & 1       & W    \\ \hline
+CONTENUTO       & E         & 1       & R    \\ \hline
+\textit{TOTALE} &           & 4       &      \\ \hline
+\end{tabular}
+\end{table}
+\begin{table}[H]
+\paragraph{Operazione \ref{leggere_post}\newline}
+\begin{tabular}{|c|c|c|c|}
+\hline
+Concetto             & Costrutto & Accessi & Tipo \\ \hline
+CONTENUTO            & E         & 1       & R    \\ \hline
+REAZIONE             & A         & 200     & R    \\ \hline
+PUBBLICAZIONE        & A         & 1       & R    \\ \hline
+UTENTE               & E         & 1       & R    \\ \hline
+LUOGO\_PUBBLICAZIONE & A         & 1       & R    \\ \hline
+REGIONE              & E         & 7       & R    \\ \hline
+PARTE\_DI            & E         & 7       & R    \\ \hline
+RISPOSTA             & A         & 10      & R    \\ \hline
+COMMENTO             & E         & 10      & R    \\ \hline
+REAZIONE             & A         & 2000    & R    \\ \hline
+TOTALE               &           & 2238    &      \\ \hline
+\end{tabular}
+\end{table}
+\begin{table}[H]
+\paragraph{Operazione \ref{feed}\newline}
+\begin{tabular}{|c|c|c|c|}
+\hline
+Concetto      & Costrutto & Accessi & Tipo \\ \hline
+UTENTE        & E         & 1       & R    \\ \hline
+SEGUE         & A         & 100     & R    \\ \hline
+SEGUIRE       & E         & 100     & R    \\ \hline
+SEGUITO       & A         & 100     & R    \\ \hline
+UTENTE        & E         & 100     & R    \\ \hline
+PUBBLICAZIONE & A         & 2000    & R    \\ \hline
+CONTENUTO     & E         & 2000    & R    \\ \hline
+REAZIONE      & A         & 400000  & R    \\ \hline
+TOTALE        &           & 404401  &      \\ \hline
+\end{tabular}
+\end{table}
+Il costo giornaliero di queste 3 operazioni in totale:
+\begin{equation}
+  \frac{80} g \times 4 R + \frac{100} g \times 2.238 R + \frac{40} g \times 404.401 R = 16.400.160 \frac{R} g 
+\end{equation}
+\subsubsection{Caso con ridondanza}
+\begin{table}[H]
+\paragraph{Operazione \ref{like}\newline}
+\begin{tabular}{|c|c|c|c|}
+\hline
+Concetto        & Costrutto & Accessi & Tipo \\ \hline
+UTENTE          & E         & 1       & R    \\ \hline
+REAZIONE        & A         & 1       & W    \\ \hline
+CONTENUTO       & E         & 2       & W    \\ \hline
+\textit{TOTALE} &           & 5       &      \\ \hline
+\end{tabular}
+\end{table}
+\begin{table}[H]
+\paragraph{Operazione \ref{leggere_post}\newline}
+\begin{tabular}{|c|c|c|c|}
+\hline
+Concetto             & Costrutto & Accessi & Tipo \\ \hline
+CONTENUTO            & E         & 1       & R    \\ \hline
+PUBBLICAZIONE        & A         & 1       & R    \\ \hline
+UTENTE               & E         & 1       & R    \\ \hline
+LUOGO\_PUBBLICAZIONE & A         & 1       & R    \\ \hline
+REGIONE              & E         & 7       & R    \\ \hline
+PARTE\_DI            & E         & 7       & R    \\ \hline
+RISPOSTA             & A         & 10      & R    \\ \hline
+COMMENTO             & E         & 10      & R    \\ \hline
+TOTALE               &           & 38      &      \\ \hline
+\end{tabular}
+\end{table}
+\begin{table}[H]
+\paragraph{Operazione \ref{feed}\newline}
+\begin{tabular}{|c|c|c|c|}
+\hline
+Concetto      & Costrutto & Accessi & Tipo \\ \hline
+UTENTE        & E         & 1       & R    \\ \hline
+SEGUE         & A         & 100     & R    \\ \hline
+SEGUIRE       & E         & 100     & R    \\ \hline
+SEGUITO       & A         & 100     & R    \\ \hline
+UTENTE        & E         & 100     & R    \\ \hline
+PUBBLICAZIONE & A         & 2000    & R    \\ \hline
+CONTENUTO     & E         & 2000    & R    \\ \hline
+TOTALE        &           & 4401    &      \\ \hline
+\end{tabular}
+\end{table}
+Il costo giornaliero di queste 3 operazioni in totale:
+\begin{equation}
+  \frac{80} g \times 5 R + \frac{100} g \times 38 R + \frac{40} g \times 4.401 R = 180.440 \frac{R} g 
+\end{equation}
+Concludiamo che dobbiamo preservare la ridondanza.
 \section{Traduzione di entità e associazioni in relazioni}
 \section{Schema relazionale finale}
 \section{Traduzione delle operazioni in query SQL}
