--- a/report/main.tex
+++ b/report/main.tex
@@ -19,7 +19,7 @@ Ogni utente può mettere \textbf{like} e dislike a post e commenti. Ricevendo re
 Gli utenti inoltre possono \textbf{seguire} altri utenti e smettere di seguirli. Sarà possibile avere uno storico di queste operazioni. 
 Il social fornirà ad ogni utente un feed, cioè una sequeza di post pubblicati dagli utenti da lui seguiti.
 Gli utenti possono chattare con altri utenti. Le \textbf{chat} si compongono di messaggi inviati dai membri di quella chat. Ogni \textbf{messaggio} ha un suo autore, un timestamp di invio, un testo ed può citare un post o commento. Ogni messaggio inoltre può essere in risposta ad un altro messaggio di quella chat. 
-Ogni utente può creare una \textbf{chat}. Ogni chat ha uno o più membri amministratori. Gli\textbf{amministratori} possono far entrare nuovi membri nelle chat di cui sono amministratori. Gli amministratori hanno diritto di cacciare degli utenti dalla chat, eventualmente comunicando una motivazione. Gli utenti possono uscire volontariamente dalle chat a cui appartengono. Gli utenti che escono volontariamente dalla chat possono lasciare una motivazione del loro gesto. 
+Ogni utente può creare una \textbf{chat}. Ogni chat ha uno o più membri amministratori. Gli \textbf{amministratori} possono far entrare nuovi membri nelle chat di cui sono amministratori. Gli amministratori hanno diritto di cacciare degli utenti dalla chat, eventualmente comunicando una motivazione. Gli utenti possono uscire volontariamente dalle chat a cui appartengono. Gli utenti che escono volontariamente dalla chat possono lasciare una motivazione del loro gesto. 
 Infine gli amministratori possono eliminare dei messaggi della chat, mentre gli utenti non amministratori non hanno questa facoltà.
 \section{Definizioni}
 \begin{itemize}
@@ -460,17 +460,8 @@ TOTALE             &            & 19         &            \\ \hline
 Nel nostro social network, un contenuto puo essere sia un 
 post che un messaggio. Dato che i messaggi non hanno un titolo, mentre un post ha necessariamente un titolo, 
 abbiamo optato definirli attraverso la presenza questo attributo, usando un collasso verso l' alto.
-Un utente puo essere un amministratore o no in una chat, e in questo caso abbiamo optato per un collasso verso 
-l' alto. Infatti, dato che ogni utente e definito come membro di una chat e i diritti di amministrazione sono esclusivi a 
-quella chat, abbiamo definito una flag che ci dice se l' utente ha diritti amministratore.
-\subsection{Eliminazione di identificatori esterni}
-Rispetto allo schema e/r sono state eliminate  le seguenti relazioni:
-\begin{itemize}
-  \item  
-  \item 
-  \item
-\end{itemize}
-\section{Analisi delle ridondanze}
+Un utente puo essere un amministratore o no in una chat, e anche in questo caso abbiamo optato per un collasso verso 
+l' alto. Infatti, abbiamo inserito creato una table amminitratori, e se l'idMembro e presente in questa table, allora l' utente e admin di quella chat.
 \subsection{Numero di like netto dei contenuti}
 Consideriamo se è il caso di aggiungere un campo ridondante nell'entità CONTENUTO che calcola il numero netto di like riguardanti quel contenuto. Le operazioni interessate da questa ridondanza sono le operazioni \ref{like}, \ref{leggere_post}, \ref{feed}.
 \subsubsection{Caso senza ridondanza}
